src/dashboard/Data/ApiConsole/ApiConsole.scss
/*
 * Copyright (c) 2016-present, Parse, LLC
 * All rights reserved.
 *
 * This source code is licensed under the license found in the LICENSE file in
 * the root directory of this source tree.
 */
@import 'stylesheets/globals.scss';

.curl {
  @include MonospaceFont;
  white-space: pre;
  font-size: 12px;
  padding: 20px;
  line-height: 18px;
}

.footer {
  border-top: 1px solid #e3e3ea;
  padding: 10px 0;
  text-align: center;
}

.content {
  position: relative;
  min-height: 100vh;
  padding-top: 96px;
}

.empty {
  position: absolute;
  top: 96px;
  left: 0;
  right: 0;
  bottom: 0;
}

